test/results/whitespace.owltest.stderr
error: the text 'x' doesn't match any token

  xbxxaxxxxxaaxxxb
  ~               

